--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 /*GOOGLE FONTS*/
-
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,500;0,800;1,300;1,400&display=swap');
 
     @import url('https://fonts.googleapis.com/css2?family=Schibsted+Grotesk:ital,wght@0,400;0,500;0,600;1,400&display=swap');
 
+    @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100;0,500;0,800;1,300;1,400&display=swap');
+
 * {
 
-    margin: 0;
-    padding: 0;
+    margin : 0 ;
+    padding: 10px;
     box-sizing: border-box;
     
 }
@@ -106,13 +108,13 @@ font-size: 15px;
 
 .sectionPrimera {
 height: 500px;
-display: grid;
+display: flex;
 grid-template-columns: 1fr;
 background: url(./img/imagenSeccion-1.jpg);
 background-attachment: fixed;
 background-size: cover;
 text-align: center;
-font-size: 35px;
+font-size: 20px;
 padding: 90px 150px;
 
 }
@@ -127,20 +129,28 @@ align-items: center;
 
 }
 
-.sectionPrimeraDiv h1, h2 {
+.sectionPrimeraDiv h1 {
 
-font-family:"Schibsted Grotesk", sans-serif;
-font-size: 50px;
-font-weight: 900;
+font-family: 'Bebas Neue', cursive;    
+font-size: 100px;
+font-weight: 600;
+-webkit-text-stroke: 0.1px #332C2F;
 margin-bottom: 20px;
 color: #383838;
 
 }
 
+.sectionPrimeraDiv h2 {
+
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    color: #383838;
+}
+
 .sectionPrimera p {
 
-    color:rgb(18, 63, 99);
-    font-weight: 800;
+    
+    font-size: 25px;
     
     
     }
@@ -151,29 +161,25 @@ color: #383838;
 
 .sectionSegunda {
 
-display: grid;
-grid-template-rows: 1fr 1fr;
-padding: 70px 100px;
+
 text-align: center;
-gap: 20px;
 
 }
 
-.sectionSegundatitulo h2 {
+.sectionSegunda .sectionSegundatitulo h2 {
 
-    color:  rgb(24, 81,129);
-    font-size: 40px;
-}
-
-.sectionSegundaParrafo {
-
-    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(171, 208, 239);
+    color:rgb(24, 81,129);
+    font-size:30px;
 }
 
 
 .sectionSegundaParrafo p {
 
-    font-size: 25px;
+    font-size: 20px;
 }
 /*SECTION TITULO SERVICIOS*/
 .servicios {
@@ -181,7 +187,7 @@ gap: 20px;
 display: grid;
 grid-template-columns: repeat(2, 1fr);
 gap: 20px;
-margin-top: 40px;
+margin-top: 30px;
 
 
 }
@@ -191,7 +197,12 @@ margin-top: 40px;
 .tituloServicios {
 
     color:  rgb(24, 81,129);
-    font-size: 40px;
+    font-size: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(171, 208, 239);
+    color:  rgb(24, 81,129);
 }
 
 
@@ -205,7 +216,7 @@ margin-top: 40px;
 .servicios .serviciosTexto {
 
     text-align: center;
-    font-size: 22px;
+    font-size: 20px;
 
 }
 
@@ -215,46 +226,12 @@ margin-top: 40px;
     
 }
 
-.sectionServicios .computadoras .textoComputadoras h3 {
-
-    color: rgb(32, 109, 172) ;
-
-}
-
-.sectionServicios .smartphone .textoSmartPhone h3 {
-
-    color: rgb(32, 109, 172) ;
-}
-
-.sectionServicios .camaraSeguridad .textoCamaras h3 {
-
-    color: rgb(32, 109, 172) ;
-
-}
-
-.sectionServicios .backUp .textoBackup h3 {
-
-    color: rgb(32, 109, 172) ;
-    
-}
-.sectionServicios .hosting .textoHosting h3 {
-
-    color: rgb(32, 109, 172) ;
-}
-
-.sectionServicios .software .textoSoftware h3 {
-
-    color: rgb(32, 109, 172) ;
-
-}
-
 .servicios .serviciosTexto p {
 
     text-align: center;
     padding: 30px 30px;
     
-
-    }
+}
 
 
 .tituloServicios {
@@ -263,18 +240,93 @@ margin-top: 40px;
     
 }
 
-/*FIN SECTIOS TITULO SERVICIOS*/
+/*FIN SECTION TITULO SERVICIOS*/
+
 
 /*SECTION SERVICIOS*/
 
+
 .sectionServicios {
 
-display: grid;
-grid-template-columns: repeat(3, 1fr);
-gap: 35px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 35px;
+    
+    }
+
+.sectionServicios .computadoras .textoComputadoras h3 {
+
+    color: rgb(32, 109, 172) ;
+    text-align: center;
 
 }
 
+.sectionServicios .computadoras .textoComputadoras p {
+
+    font-size: 18px;
+    text-align: center;
+}
+
+.sectionServicios .smartphone .textoSmartPhone h3 {
+
+    color: rgb(32, 109, 172) ;
+    text-align: center;
+}
+.sectionServicios .smartphone .textoSmartPhone p {
+
+    font-size: 18px;
+    text-align: center; 
+}
+
+.sectionServicios .camaraSeguridad .textoCamaras h3 {
+
+    color: rgb(32, 109, 172) ;
+    text-align: center;
+
+}
+
+.sectionServicios .camaraSeguridad .textoCamaras p {
+
+    font-size: 18px;
+    text-align: center; 
+}
+
+.sectionServicios .backUp .textoBackup h3 {
+
+    color: rgb(32, 109, 172) ;
+    text-align: center;
+    
+}
+
+.sectionServicios .backUp .textoBackup p {
+    font-size: 18px;
+    text-align: center; 
+}
+
+.sectionServicios .hosting .textoHosting h3 {
+
+    color: rgb(32, 109, 172) ;
+    text-align: center;
+}
+
+
+.sectionServicios .hosting .textoHosting p {
+
+    font-size: 18px;
+    text-align: center; 
+}
+
+.sectionServicios .software .textoSoftware h3 {
+
+    color: rgb(32, 109, 172) ;
+    text-align: center;
+}
+
+.sectionServicios .software .textoSoftware p {
+
+    font-size: 18px;
+    text-align: center; 
+}
 
 
 .sectionServicios .computadoras .imgComputadoras img {
@@ -282,7 +334,7 @@ gap: 35px;
     width: 100%;
     height: 100%;
     border-radius: 0.5rem;
-    
+    box-shadow:  5px 5px 5px 5px #A1A1FF;
     
 }
 
@@ -291,6 +343,7 @@ gap: 35px;
     width: 100%;
     height: 100%;
     border-radius: 0.5rem;
+    box-shadow:  5px 5px 5px 5px #A1A1FF;
 }
 
 .sectionServicios .camaraSeguridad .imgCamaraSeguridad img {
@@ -298,6 +351,7 @@ gap: 35px;
     width: 100%;
     height: 100%;
     border-radius: 0.5rem;
+    box-shadow:  5px 5px 5px 5px #A1A1FF;
 }
 
 .sectionServicios .backUp .imgBackup img {
@@ -305,6 +359,7 @@ gap: 35px;
     width: 100%;
     height: 100%;
     border-radius: 0.5rem;
+    box-shadow:  5px 5px 5px 5px #A1A1FF;
 }
 
 .sectionServicios .hosting .imgHosting img {
@@ -312,6 +367,7 @@ gap: 35px;
     width: 100%;
     height: 100%;
     border-radius: 0.5rem;
+    box-shadow:  5px 5px 5px 5px #A1A1FF;
 }
 
 .sectionServicios .software .imgSoftware img {
@@ -319,14 +375,7 @@ gap: 35px;
     width: 100%;
     height: 100%;
     border-radius: 0.5rem;
-}
-
-.sectionServicios .computadoras .textoComputadoras {
-
-    text-align: center;
-
-
-
+    box-shadow:  5px 5px 5px 5px #A1A1FF;
 }
 
 /*FIN SECTIOS SERVICIOS*/
@@ -344,8 +393,15 @@ gap: 35px;
 .textoEquipos h2 {
 
     text-align: center;
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(171, 208, 239);
+    color:  rgb(24, 81,129);
+    font-size: 30px;
 }
+
+
 .ventaequipos .card-body .card-text{
 
     display: flex;
@@ -359,6 +415,15 @@ gap: 35px;
 
 
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(171, 208, 239);
+    color:  rgb(24, 81,129);
+}
+.textoContacto h2 {
+
+    font-size: 30px;
 }
 
 .contacto {
@@ -366,10 +431,11 @@ gap: 35px;
 display: grid;
 grid-template-columns: repeat(2, 1fr);
 gap: 10px;
-
-
+font-size: 20px;
 
 }
+
+
 
 .contacto .imgContacto img {
 
@@ -377,7 +443,6 @@ width: 90%;
 height: auto;
 border-radius: 0.5rem;
 margin: 10px 20px;
-
 
 }
 
