--- a/style.css
+++ b/style.css
@@ -381,6 +381,43 @@ margin-top: 30px;
 
 /*FIN SECTIOS SERVICIOS*/
 
+/*SECTION COTIZADOR*/
+
+.containerCotizador h2 {
+
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(171, 208, 239);
+    color:  rgb(24, 81,129);
+    font-size: 30px;
+}
+
+
+.containerCotizador .containerRow {
+
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    margin-top: 30px;
+}
+
+.containerCotizador .containerRow .formCotizadorImg {
+
+    width: 100%;
+    height: 80%;
+
+}
+.containerCotizador .containerRow .formCotizador {
+
+    font-size: 20px;
+    font-family:  'Montserrat', sans-serif;
+
+}
+
+/*FIN SECTION COTIZADOR*/
+
 /*SECTION VENTA EQUIPOS*/
 
 .sectionVentas .ventaEquipos {
