--- a/style.css
+++ b/style.css
@@ -385,7 +385,7 @@ margin-top: 30px;
 
 .containerReclamos h2 {
 
-    display: grid;
+    display: flex;
     text-align: center;
     align-items: center;
     justify-content: center;
@@ -393,21 +393,14 @@ margin-top: 30px;
     color:  rgb(24, 81,129);
     font-size: 30px;
 }
-.containerReclamos .containerRow {
 
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    margin-top: 30px;
+.row .formReclamos {
 
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    font-size: 15px;
 }
-
-.containerReclamos .containerRow .form1 {
-
-    font-size: 20px;
-
-}
-
 /*FIN SECTION RECLAMOS*/
 
 /*SECTION VENTA EQUIPOS*/
